fixing stupid layout issues

--- a/HealthCareWeb/WebContent/css/bootstrap.css
+++ b/HealthCareWeb/WebContent/css/bootstrap.css
@@ -899,4 +899,5 @@ i[class^="icon-"]{opacity:0.5;vertical-align:-2px;}
 }
 .row-fluid .span9 {
 	width: 74.46808510638297%;
+	margin-left:0;
 }
